log
Thu 09 May 2024 03:18:21 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
b64b108
Thu 09 May 2024 03:38:34 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
497bd31
Thu 09 May 2024 03:40:30 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
07be17b
Thu 09 May 2024 03:41:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
0d0f9c0
Thu 09 May 2024 03:43:00 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
787081a
Thu 09 May 2024 03:43:30 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
aeb023f
Thu 09 May 2024 03:43:46 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
81e1cff
Thu 09 May 2024 03:44:32 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|7
total_score: 5/70
d2ce5aa
Thu 09 May 2024 03:47:36 PM UTC: 
 treemap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  0|0
fa296eb
Thu 09 May 2024 03:51:19 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
8623e08
Thu 09 May 2024 03:51:38 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
e9d5ce9
